Placeholder content, sections and footer

--- a/index.html
+++ b/index.html
@@ -6,11 +6,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Love Running club for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
-
+    
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Love Running</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>Header content</header>
+
+    <section>
+        Main image
+    </section>
+
+    <section>
+        Club ethos
+    </section>
+
+    <section>
+        Running location, distances, times
+    </section>
+
+    <footer>
+        Social media
+    </footer>
 </body>
 </html>
