--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul><li><a href="index.html">Home</a></li>
+            <ul id="menu"><li><a href="#">Sign up!</a></li>
                 <li><a href="#">Gallery</a></li>
-                <li><a href="#">Sign up!</a></li>
+                <li><a href="index.html" class="active">Home</a></li> 
             </ul>
             
         </nav>
