Add hero image and animation for zoom

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         </nav>
     </header>
 
-    <section>
-        Main image
+    <section id="hero-outer">
+        <div id="hero-image"></div>
     </section>
 
     <section>
