Some stuff and small code fixes

--- a/index.html
+++ b/index.html
@@ -16,9 +16,15 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul id="menu"><li><a href="#">Sign up!</a></li>
-                <li><a href="#">Gallery</a></li>
-                <li><a href="index.html" class="active">Home</a></li> 
+            <ul id="menu"><li>
+                <a href="#">Sign up!</a>
+            </li>
+                <li>
+                    <a href="#">Gallery</a>
+                </li>
+                <li>
+                    <a href="index.html" class="active">Home</a>
+                </li> 
             </ul>
             
         </nav>
@@ -26,6 +32,10 @@
 
     <section id="hero-outer">
         <div id="hero-image"></div>
+        <div id="cover-text">
+            <h2>Love Running</h2>
+            <h3>Dublin Docklands & Phoenix Park</h3>
+        </div>
     </section>
 
     <section>
