Club ethos reasons for running section

--- a/index.html
+++ b/index.html
@@ -38,8 +38,20 @@
         </div>
     </section>
 
-    <section>
-        Club ethos
+    <section id="club-ethos">
+        <h1>Why Love Running With Us?</h1>
+
+        <div id="left-about">
+            Left
+        </div>
+
+        <div id="right-about">
+            Right
+        </div>
+
+        <div id="center-about">
+            Center
+        </div>
     </section>
 
     <section>
