--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="club-ethos">
-        <h1>Why Love Running With Us?</h1>
+        <h2 id="welcome">Why Love Running With Us?</h2>
 
         <div id="left-about">
             <div class="left-about-heading">
@@ -68,7 +68,9 @@
         </div>
 
         <div id="center-about">
-            Center
+            <div id="circle-container">
+                <div id="circle-cover-bg"></div>
+            </div>
         </div>
     </section>
 
