--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
         <div id="left-about">
             <div class="left-about-heading">
-                <h2>Feel Healthy</h2>
+                <h2>Feel Healthy <i class="fa-solid fa-heart-pulse"></i></h2>
                 <hr>
                 <p>Since it improves aerobic fitness, running is a great way to help improve your cardiovascular health. Plus, it burns calories and can build strength.</p>
             </div>
             <div class="left-about-heading">
-                <h2>Feel Free</h2>
+                <h2>Feel Free <i class="fa-brands fa-fly"></i></h2>
                 <hr>
                 <p>Physical exercise, running included, is known to release endorphins in the brain. Endorphins make you more energetic, more awake and, yes, happier.</p>
             </div>
@@ -56,12 +56,12 @@
 
         <div id="right-about">
             <div class="right-about-heading">
-                <h2>Get Social</h2>
+                <h2>Get Social <i class="fa-solid fa-globe"></i></h2>
                 <hr>
                 <p>When we run with others, we can run farther and faster more easily. Social running can pull you out of a running funk or low mood, inspire you to try new events</p>
             </div>
             <div class="right-about-heading">
-                <h2>Feel Strong</h2>
+                <h2>Feel Strong <i class="fa-solid fa-dumbbell"></i></h2>
                 <hr>
                 <p>Running strengthens your heart by pumping blood more effectively through your body.</p>
             </div>
@@ -81,5 +81,8 @@
     <footer>
         Social media
     </footer>
+
+    <!-- font awesome script -->
+    <script src="https://kit.fontawesome.com/79d1545eb5.js" crossorigin="anonymous"></script>
 </body>
 </html>
