Add social media icons to footer

--- a/index.html
+++ b/index.html
@@ -113,7 +113,24 @@
     </section>
 
     <footer>
-        Social media
+        <ul>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank" rel="noopener" 
+                aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com/" target="_blank" rel="noopener" 
+                aria-label="visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank" rel="noopener" 
+                aria-label="visit our YouTube page (opens in a new tab)"><i class="fa-brands fa-youtube-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.instagram.com/" target="_blank" rel="noopener" 
+                aria-label="visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
+            </li>
+        </ul>
     </footer>
 
     <!-- font awesome script -->
