Add style to footer social media icons

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </section>
 
     <footer>
-        <ul>
+        <ul class="social-networks">
             <li>
                 <a href="https://www.facebook.com/" target="_blank" rel="noopener" 
                 aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
